@@ -53,6 +53,9 @@ Bindings:
 * .net
 * java
 
+20141004
+* update Python-bindings tests
+
 20140921
 * changes for project site move
 
